--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     <link rel="stylesheet" href="styles/index.css">
     <link rel="stylesheet" media="screen and (max-width: 600px)" href="styles/mobile/mobileview.css">
     <link rel="stylesheet" media="screen and (min-width:601px) and (max-width: 992px)" href="styles/tablet/tabletview.css">
-    <link rel="stylesheet" media="screen and (max-width: 600px)" href="styles/mobile/matchmobile.css">
-    <link rel="stylesheet" media="screen and (min-width:601px) and (max-width: 992px)" href="styles/matchtablet.css">
     <script src="https://kit.fontawesome.com/811e7b5b45.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Oswald&family=Poppins&family=Rubik+Moonrocks&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-----------------------------------Banner----------------------------->
@@ -36,7 +39,7 @@
     <section>
       <div class="photogrid">
         <div class="photo">
-            <div class="photo1 pho2"><a href="match.html">Upcoming Match</a></div>
+            <div class="photo1 pho2"><a href="#match.html"></a>Upcoming Match</a></div>
             <br>
             <div class="photo1 pho3"><a href="#">All Group</a></div>
             <br>
@@ -140,17 +143,20 @@
 
 <section class="footer">
    
-        <h1 class="footer1">Goal</h1>
+        <h1 class="footer1">Wordld Cup</h1>
         <hr class="border">
         <br><br>
-        <div class="padding">
+    <div class="padding">
         <a class="foo1 fool1"href="#">Contact Us</a>
         <a class="foo1 fool1"href="#">Terms of Service</a>
         <a class="foo1 fool1"href="#">Privacy Policy</a>
         <a class="foo1 fool1"href="#">Privacy Settings</a>
         <a class="foo1 fool1"href="#">Goal App</a>
         <a class="foo1 fool1"href="#">Goal Live</a>
+        
     </div>
+    <p><i class="fa-regular fa-clock"></i></p>
+    <p><i class="fa-brands fa-twitter-square"></i></p>
 </section>
 
 </body>
