--- a/match.html
+++ b/match.html
@@ -7,6 +7,15 @@
     <title>World Cup</title>
     <link rel="stylesheet" href="styles/match.css">
     <script src="https://kit.fontawesome.com/811e7b5b45.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Oswald&family=Poppins&family=Rubik+Moonrocks&display=swap" rel="stylesheet">
+
+<link rel="stylesheet" media="screen and (max-width: 600px)" href="styles/mobile/matchmobile.css">
+    <link rel="stylesheet" media="screen and (min-width:601px) and (max-width: 992px)" href="styles/matchtablet.css">
+
 </head>
 <body>
     <!-----------------------------------Banner----------------------------->
@@ -89,7 +98,7 @@
 
 <section class="footer">
    
-        <h1 class="footer1">Goal</h1>
+        <h1 class="footer1">World Cup</h1>
         <hr class="border">
         <br><br>
         <div class="padding">
